--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -673,6 +673,7 @@ p {
 @media (min-width: 768px) {
   .hero-title {
     font-size: 50px;
+    line-height: 1;
   }
 }
 
@@ -898,6 +899,10 @@ button:hover,
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-1 {
+  bottom: 10px;
 }
 
 .bottom-\[-85px\] {
@@ -1167,6 +1172,10 @@ button:hover,
   height: 5px;
 }
 
+.h-5 {
+  height: 50px;
+}
+
 .h-\[10px\] {
   height: 10px;
 }
@@ -1222,10 +1231,6 @@ button:hover,
 
 .h-screen {
   height: 100vh;
-}
-
-.h-5 {
-  height: 50px;
 }
 
 .max-h-\[200px\] {
@@ -1425,10 +1430,6 @@ button:hover,
   cursor: pointer;
 }
 
-.scroll-mt-\[140px\] {
-  scroll-margin-top: 140px;
-}
-
 .list-outside {
   list-style-position: outside;
 }
@@ -1538,16 +1539,16 @@ button:hover,
   justify-self: center;
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
 .\!overflow-visible {
   overflow: visible !important;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .whitespace-nowrap {
@@ -1664,6 +1665,11 @@ button:hover,
   background-color: rgb(184 208 252 / .85);
 }
 
+.bg-blueDark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(157 188 244 / var(--tw-bg-opacity, 1));
+}
+
 .bg-grey {
   --tw-bg-opacity: 1;
   background-color: rgb(55 55 56 / var(--tw-bg-opacity, 1));
@@ -1756,6 +1762,11 @@ button:hover,
   stroke: #fff;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1791,6 +1802,11 @@ button:hover,
   padding-right: 0px;
 }
 
+.px-1 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .px-2 {
   padding-left: 20px;
   padding-right: 20px;
@@ -1819,6 +1835,11 @@ button:hover,
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
+}
+
+.py-0\.5 {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .py-10 {
@@ -2161,43 +2182,33 @@ button:hover,
   transition-duration: 500ms;
 }
 
-.duration-100 {
-  transition-duration: 100ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
-}
+/* 
+    From Safari 13, only display: none works with this pseudo-element. Other styles have no effect. 
+    https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-scrollbar#browser_compatibility
+  */
 
 /* width */
 
 #scroll-navigation::-webkit-scrollbar {
   height: 3px;
-  width: 3px;
+  width: 0;
 }
 
 /* Track */
 
+/* Bed of the slider */
+
 #scroll-navigation::-webkit-scrollbar-track {
-  /* background: #888; */
-  border-radius: 5px;
+  background: transparent;
 }
 
 /* Handle */
 
+/* Slider */
+
 #scroll-navigation::-webkit-scrollbar-thumb {
   background: #D7B4F3;
   border-radius: 5px;
-}
-
-/* Handle on hover */
-
-#scroll-navigation::-webkit-scrollbar-thumb:hover {
-  background: #000;
 }
 
 .before\:absolute::before {
@@ -2241,10 +2252,31 @@ button:hover,
   top: 0px;
 }
 
+.after\:hidden::after {
+  content: var(--tw-content);
+  display: none;
+}
+
 .after\:size-full::after {
   content: var(--tw-content);
   width: 100%;
   height: 100%;
+}
+
+.after\:h-\[3px\]::after {
+  content: var(--tw-content);
+  height: 3px;
+}
+
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.after\:bg-pink::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(215 180 243 / var(--tw-bg-opacity, 1));
 }
 
 .after\:bg-blackGradientVerticalMobile::after {
@@ -2463,6 +2495,11 @@ button:hover,
   .md\:before\:bg-blackGradientHorizontal::before {
     content: var(--tw-content);
     background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0) 65%);
+  }
+
+  .md\:after\:bottom-0::after {
+    content: var(--tw-content);
+    bottom: 0px;
   }
 
   .md\:after\:bg-blackGradientVertical::after {
