--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   {# This is intended to be used if a template requires template specific style sheets #}
   {% if template_css %}
-  {{ require_css(get_asset_url(template_css)) }}
+  {{ require_css(get_asset_url(template_css), { async: true }) }}
   {% endif %}
   {{ require_css(get_asset_url("../../css/tw-output.css")) }}
   {{ require_css(get_asset_url("../../css/main.css")) }}
@@ -39,7 +39,7 @@
     {% global_partial path='../partials/footer.html' %}
     {% endblock footer %}
   </div>
-  {{ require_js(get_asset_url('../../js/main.js')) }}
+  {{ require_js(get_asset_url('../../js/main.js'), { position: "footer", async: true }) }}
   {# To see a full list of what is included via standard_footer_includes please reference this article:
   https://developers.hubspot.com/docs/cms/hubl/variables#required-page-template-variables #}
   {{ standard_footer_includes }}
