--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -18,6 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
+				'custom_section_classes': 'px-4 pt-[140px] pb-6 text-center',
 	      'title': '<h1>About Us</h1>',
 				'subtitle': '<p class="font-light text-lg md:text-3xl">Cilj nam je da idemo u korak sa savremenim trendovima, jer je to uslov za dalji razvoj i napredak.</p>'
 	    }
