--- a/templates/pools-services.html
+++ b/templates/pools-services.html
@@ -18,8 +18,9 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
+			'custom_section_classes': 'px-4 pt-[140px] pb-6 text-center',
 	      'title': '<h1>Projektovanje i izgradnja bazena</h1>',
-				'subtitle': '<p class="font-light text-lg xl:text-3xl mb-2">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>',
+				'subtitle': '<p class="font-light text-base xl:text-3xl mb-2">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>',
 				'button_text': 'KONTAKTIRAJTE NAS'
 	    }
 	  %}
