--- a/templates/water-treatment.html
+++ b/templates/water-treatment.html
@@ -18,6 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
+			'custom_section_classes': 'px-4 pt-[140px] pb-6',
 	      'title': '<h1>Water Treatment</h1>'
 	    }
 	  %}
