--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -154,7 +154,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -561,15 +561,33 @@ h1,
   h5,
   h6 {
   margin: 0px;
-  margin-bottom: 20px;
-  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  margin-bottom: 10px;
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+@media (min-width: 1024px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: 20px;
+  }
 }
 
 h1,
   .h1 {
-  font-size: 52px;
-  line-height: 1;
-  font-weight: 500;
+  font-size: 40px;
+}
+
+@media (min-width: 1024px) {
+  h1,
+  .h1 {
+    font-size: 52px;
+    line-height: 1;
+    font-weight: 500;
+  }
 }
 
 h2,
@@ -590,7 +608,7 @@ h2,
 
 h3,
   .h3 {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 700;
   line-height: 1.142;
 }
@@ -614,7 +632,8 @@ h3,
 h4,
   .h4 {
   font-size: 24px;
-  line-height: 1.333;
+  font-weight: 400;
+  line-height: 1.25;
 }
 
 @media (min-width: 1024px) {
@@ -657,11 +676,19 @@ h6,
 }
 
 p {
-  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 16px;
-  line-height: 1.25rem;
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 14px;
+  line-height: 1rem;
   font-weight: 300;
   line-height: 1.375;
+}
+
+@media (min-width: 1024px) {
+  p {
+    font-size: 16px;
+    line-height: 1.375;
+    font-weight: 300;
+  }
 }
 
 .hero-title {
@@ -679,7 +706,13 @@ p {
 
 @media (min-width: 1024px) {
   .hero-title {
-    font-size: 76px;
+    font-size: 56px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .hero-title {
+    font-size: 68px;
   }
 }
 
@@ -714,7 +747,7 @@ button,
   padding-right: 25px;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 14px;
   line-height: 1rem;
   font-weight: 500;
@@ -1023,6 +1056,10 @@ button:hover,
   margin-bottom: 20px;
 }
 
+.-mb-0\.5 {
+  margin-bottom: -5px;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -1073,6 +1110,10 @@ button:hover,
 
 .ml-\[unset\] {
   margin-left: unset;
+}
+
+.mr-0\.5 {
+  margin-right: 5px;
 }
 
 .mr-3 {
@@ -1182,6 +1223,10 @@ button:hover,
 
 .h-\[180px\] {
   height: 180px;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-\[20px\] {
@@ -1892,9 +1937,19 @@ button:hover,
   padding-bottom: 180px;
 }
 
+.py-\[3px\] {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+.py-1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .pb-10 {
@@ -1937,6 +1992,14 @@ button:hover,
   padding-top: 100px;
 }
 
+.pt-2 {
+  padding-top: 20px;
+}
+
+.pt-3 {
+  padding-top: 30px;
+}
+
 .pt-4 {
   padding-top: 40px;
 }
@@ -1969,6 +2032,10 @@ button:hover,
   padding-top: 56.25%;
 }
 
+.pb-1 {
+  padding-bottom: 10px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1982,7 +2049,7 @@ button:hover,
 }
 
 .font-sans {
-  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -2075,6 +2142,10 @@ button:hover,
   line-height: 1.142;
 }
 
+.leading-2 {
+  line-height: 1.2;
+}
+
 .leading-5 {
   line-height: 1.333;
 }
@@ -2117,6 +2188,10 @@ button:hover,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .opacity-50 {
@@ -2380,8 +2455,16 @@ button:hover,
     margin-bottom: 0px;
   }
 
+  .sm\:h-\[250px\] {
+    height: 250px;
+  }
+
   .sm\:h-\[500px\] {
     height: 500px;
+  }
+
+  .sm\:min-h-\[80svh\] {
+    min-height: 80svh;
   }
 
   .sm\:max-w-15 {
@@ -2414,12 +2497,16 @@ button:hover,
     margin-bottom: 0px;
   }
 
-  .md\:max-h-\[420px\] {
-    max-height: 420px;
+  .md\:h-\[280px\] {
+    height: 280px;
   }
 
-  .md\:min-h-\[700px\] {
-    min-height: 700px;
+  .md\:min-h-\[80svh\] {
+    min-height: 80svh;
+  }
+
+  .md\:min-h-\[70svh\] {
+    min-height: 70svh;
   }
 
   .md\:columns-2 {
@@ -2461,10 +2548,6 @@ button:hover,
     padding-right: 80px;
   }
 
-  .md\:\!pb-6 {
-    padding-bottom: 60px !important;
-  }
-
   .md\:pb-\[370px\] {
     padding-bottom: 370px;
   }
@@ -2492,19 +2575,9 @@ button:hover,
     line-height: 1.333;
   }
 
-  .md\:before\:bg-blackGradientHorizontal::before {
-    content: var(--tw-content);
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0) 65%);
-  }
-
   .md\:after\:bottom-0::after {
     content: var(--tw-content);
     bottom: 0px;
-  }
-
-  .md\:after\:bg-blackGradientVertical::after {
-    content: var(--tw-content);
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.45) 4%, rgba(0, 0, 0, 0) 63%);
   }
 }
 
@@ -2561,20 +2634,32 @@ button:hover,
     display: block;
   }
 
+  .lg\:flex {
+    display: flex;
+  }
+
   .lg\:hidden {
     display: none;
   }
 
-  .lg\:h-\[350px\] {
-    height: 350px;
+  .lg\:h-\[300px\] {
+    height: 300px;
+  }
+
+  .lg\:h-\[360px\] {
+    height: 360px;
   }
 
   .lg\:h-\[6px\] {
     height: 6px;
   }
 
-  .lg\:min-h-\[800px\] {
-    min-height: 800px;
+  .lg\:min-h-\[80sch\] {
+    min-height: 80sch;
+  }
+
+  .lg\:min-h-\[80svh\] {
+    min-height: 80svh;
   }
 
   .lg\:w-1\/2 {
@@ -2583,6 +2668,10 @@ button:hover,
 
   .lg\:w-1\/4 {
     width: 25%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 
   .lg\:w-4\/5 {
@@ -2673,6 +2762,11 @@ button:hover,
     text-align: left;
   }
 
+  .lg\:text-2xl {
+    font-size: 28px;
+    line-height: 2rem;
+  }
+
   .lg\:text-3xl {
     font-size: 32px;
     line-height: 2.25rem;
@@ -2695,6 +2789,12 @@ button:hover,
   .lg\:text-lg {
     font-size: 20px;
     line-height: 1.4;
+  }
+
+  .lg\:text-p {
+    font-size: 16px;
+    line-height: 1.375;
+    font-weight: 300;
   }
 
   .lg\:text-xl {
@@ -2720,6 +2820,14 @@ button:hover,
 
   .xl\:flex {
     display: flex;
+  }
+
+  .xl\:min-h-\[90svh\] {
+    min-height: 90svh;
+  }
+
+  .xl\:w-1\/2 {
+    width: 50%;
   }
 
   .xl\:w-2\/3 {
@@ -2759,10 +2867,6 @@ button:hover,
     gap: 20px;
   }
 
-  .xl\:gap-\[160px\] {
-    gap: 160px;
-  }
-
   .xl\:text-3xl {
     font-size: 32px;
     line-height: 2.25rem;
@@ -2776,5 +2880,9 @@ button:hover,
 
   .\32xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .\32xl\:gap-\[160px\] {
+    gap: 160px;
   }
 }
