--- a/templates/fountains.html
+++ b/templates/fountains.html
@@ -18,6 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
+				'custom_section_classes': 'px-4 pt-[140px] pb-6 text-center',
 	      'title': '<h1>Fontane</h1>',
 				'subtitle': '<p class="font-light text-lg md:text-3xl">A&amp;T SISTEM je na raspolaganju da pruži usluge u svim fazama izrade fontane, od idejnog rešenja i projekta do izvođenja radova.</p>'
 	    }
