--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -12,8 +12,8 @@
   {# Main header #}
 
 
-  <div class="h-full w-full sticky top-0">
-    <div class="header__container content-wrapper border-b">
+  <div class="h-full w-full sticky top-0 bg-white">
+    <div class="header__container content-wrapper">
 
       {# Header logo column #}
 
