--- a/templates/wellness.html
+++ b/templates/wellness.html
@@ -18,6 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
+			'custom_section_classes': 'px-4 pt-[140px] pb-6 text-center',
 	      'title': '<h1>Wellness</h1>',
 				'subtitle': '<p class="font-light text-lg md:text-3xl">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>'
 	    }
