--- a/templates/covers.html
+++ b/templates/covers.html
@@ -488,6 +488,7 @@
           <strong>U skladu su sa francuskim standardom za bezbednost NF P 90-308.</strong>
           <br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
           ',
+        'h_tag_choice': 'p',
         'link_label': 'Preuzmite brošuru',
         'link': {
           "url": {
