Create header 2  Section without button, Edit Cover template links and images

--- a/templates/covers.html
+++ b/templates/covers.html
@@ -26,7 +26,7 @@
     %}
 
     {% include_dnd_partial
-      path='../sections/header-1.html',
+      path='../sections/header-2.html',
       context={
         'custom_section_classes': 'p-4',
         'title': '<h2>Bazenski pokrivači kao ekonomično i bezbedno rešenje</h2>',
@@ -118,7 +118,7 @@
               <p class="lg:w-3/5 xl:w-1/2">
                 Proizvođač: BWT POOL PRODUCTS, Francuska
                 <br>
-                Automatske nadgradni ili potopljeni rolo pokrivači  predstavljaju savršen spoj elegancije, pouzdanosti i jednostavnog rukovanja. Jednim okretom ključa, lamele bešumno klize po površini vode i vaš bazen je, po želji, prekriven ili otkriven. 
+                Automatski nadgradni ili potopljeni rolo pokrivači predstavljaju savršen spoj elegancije, pouzdanosti i jednostavnog rukovanja. Jednim okretom ključa, lamele bešumno klize po površini vode i vaš bazen je, po želji, prekriven ili otkriven. 
               </p>
             '
           %}
@@ -755,13 +755,13 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Horizon.jpeg",
+            "alt": "BWT Horizon kupola",
             "loading": "eager",
             "width": 700,
-            "height": 420,
+            "height": 360,
             "max_width": 700,
-            "max_height": 420
+            "max_height": 360
             },
             "title": "Horizon",
             "description": '
@@ -776,7 +776,7 @@
             "url": {
               "content_id": null,
               "type": "EXTERNAL",
-              "href": "https://google.com/"
+              "href": "https://atsistem.rs/hubfs/Brosure%20-%20Pokrivaci/Horizon_EN.pdf"
             },
             "open_in_new_tab": true,
             "no_follow": false
@@ -787,13 +787,13 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Harmonie.jpeg",
+            "alt": "BWT Harmonie kupola",
             "loading": "eager",
             "width": 700,
-            "height": 420,
+            "height": 360,
             "max_width": 700,
-            "max_height": 420
+            "max_height": 360
             },
             "title": "Harmonie",
             "description": '
@@ -805,13 +805,13 @@
               <small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
             ',
             "link_field": {
-            "url": {
-              "content_id": null,
-              "type": "EXTERNAL",
-              "href": "https://google.com/"
-            },
-            "open_in_new_tab": false,
-            "no_follow": false
+              "url": {
+                "content_id": null,
+                "type": "EXTERNAL",
+                "href": "https://atsistem.rs/hubfs/Brosure%20-%20Pokrivaci/Harmonie_EN.pdf"
+              },
+              "open_in_new_tab": true,
+              "no_follow": false
             },
             "link_label": "Preuzmite brošuru",
             "premium_product": false
@@ -834,8 +834,18 @@
             "href": "",
             "content_id": null
           },
-          "open_in_new_tab": false,
+          "open_in_new_tab": true,
           "no_follow": false
+        },
+        'image_field': {
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Pool%20walker.jpeg',
+          "alt": "BWT Pool Walker",
+          "size_type": null,
+          "width": 725,
+          "height": 360,
+          "loading": "eager",
+          "max_width": 725,
+          "max_height": 360
         },
         'background_color': '#F7F7FD'
       }
